--- a/index.html
+++ b/index.html
@@ -97,30 +97,37 @@
 
     <div class="who-ami">
         <div class="container-fluid">
-            <div class="who-ami-wrapper">
-                <div class="who-ami-inner">
-                    <div class="title">
-                        <span>Hi, my name is</span>
-                        Victor Umber
-                    </div>
-                    <div class="text">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptate accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab
+            <div class="container">
+                <div class="col-md-10">
+                    <div class="who-ami-inner">
+                        <div class="title">
+                            <span>Hi, my name is</span>
+                            Victor Umber
+                        </div>
+                        <div class="text">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptate accusantium doloremque
+                            laudantium, totam rem aperiam, eaque ipsa quae ab
+                        </div>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="who-ami-img">
-                        <img src="/Images/IMG-FOTO/pexels-alfonso-escalante-5930765.jpg" alt="">
-                    </div>
-
-
-                    <div class="who-ami-unfold">
-                        <div class="who-ami-unfold-text">
-                            ENTHUSIASM PHOTOGRAPHER
+                <div class="who-ami-item">
+                    <div class="row">
+                        <div class="col-md-10">
+                            <div class="who-ami-img">
+                                <img src="/Images/foto1.png" alt="">
+                            </div>
                         </div>
-                        <div class="who-ami-unfold-btn">
-                            <a class="au-btn au-btn--dark">contact now</a>
+
+                        <div class="col-md-2">
+                            <div class="who-ami-unfold">
+                                <div class="who-ami-unfold-text">
+                                    ENTHUSIASM PHOTOGRAPHER
+                                </div>
+                                <div class="who-ami-unfold-btn ">
+                                    <a href="#" class="au-btn au-btn--dark btn-black">contact now</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
